bibliografi uden UPPAAL

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -1,6 +1,6 @@
 %%%% Guide til bibtex og litteratur.bib %%%%
 
-% Alle kilder angives efter Harvard-metoden og vil i rapporten fremstaa med [FORFATTER, AAR] eller mere praecist [EFTERNAVN, AAR].
+% Alle kilder angives efter Harvard-metoden og vil i rapporten femstaa med [FORFATTER, AAR] eller mere praecist [EFTERNAVN, AAR].
 
 % Nederst findes eksempler paa kildeangivelser af typerne book, article, manual techreport og misc.
 	% - Book bruges ved helt almindelige boeger
@@ -56,7 +56,8 @@
 	author = {John Regehr},
 	title = {Safe and Structured Use of Interrupts in Real-Time and
 	Embedded Software},
-	year = {2006}
+	year = {2006},
+	address = {\url{https://www.cs.utah.edu/~regehr/papers/interrupt_chapter.pdf}}
 }
 
 @manual{es,
@@ -127,7 +128,8 @@
 @manual{wg,
 	author ={Arduino.cc},
 	address = {\url{https://www.arduino.cc/en/Guide/ArduinoWiFiShield}},
-	title ={WifiGuide}	
+	title ={WifiGuide},
+	note = {Accessed: 17-10-2016}
 }
 
 @book{rtsbog,
