--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -26,20 +26,21 @@
 }
 
 @manual{uppaal,
-	author ={{Uppsala University} and {Aalborg University}},
-	title ={UPPAAL},
-	address = {\url{http://www.uppaal.org/}}
+	author = {{Uppsala University} and {Aalborg University}},
+	address = {\url{http://www.uppaal.org/}},
+	title = {UPPAAL},
+	note = {Department of Information Technology at Uppsala University and Department of Computer Science at Aalborg University}
 }
 
 @manual{boundt,
-	author ={{Tidorum Ltd}},
-	title ={Bound-T},
+	author = {{Tidorum Ltd}},
+	title = {Bound-T},
 	address = {\url{http://www.bound-t.com/}}
 }
 
 @manual{au,
-	author ={Warren MacEvoy and Matthew Murdoch and freenerd and John Macdonald and nicolaspanel and Matt Paine},
-	title ={ArduinoUnit},
+	author = {Warren MacEvoy and Matthew Murdoch and freenerd and John Macdonald and nicolaspanel and Matt Paine},
+	title = {ArduinoUnit},
 	address = {\url{https://github.com/mmurdoch/arduinounit}}
 }
 
@@ -52,7 +53,7 @@
 	year = {2006}
 }
 
-@article{safe,
+@manual{safe,
 	author = {John Regehr},
 	title = {Safe and Structured Use of Interrupts in Real-Time and
 	Embedded Software},
@@ -112,23 +113,23 @@
 }
 
 @manual{kw,
-	author= {Wikipedia.com},
+	author = {Wikipedia.com},
 	address = {\url{https://en.wikipedia.org/wiki/Kinect}},
 	title = {Kinect Wiki},
 	year = {2016},
 	note = {Accessed: 19-10-2016}
-	}
+}
 
 
 @misc{cd,
-	author ={Bilags-CD},
-	title ={CD med bilag tilhørende B131}	
+	author = {Bilags-CD},
+	title = {CD med bilag tilhørende B131}	
 }
 
 @manual{wg,
-	author ={Arduino.cc},
+	author = {Arduino.cc},
 	address = {\url{https://www.arduino.cc/en/Guide/ArduinoWiFiShield}},
-	title ={WifiGuide},
+	title = {WifiGuide},
 	note = {Accessed: 17-10-2016}
 }
 
