--- a/Rapport/formalia/konklusion.tex
+++ b/Rapport/formalia/konklusion.tex
@@ -45,8 +45,7 @@ This requirement is fulfilled by the UPPAAL schedulability analysis as described
 
 
 \subsubsection{Conclusion}
-When considering the success of this project, the final product is somewhat a success. One can conclude that the hardware does not meet the time constraints of the problem, and the prediction is not reliable. When a user throws an object towards the robot, it is not able to catch the object, but it is able to give a prediction of the impact point, it is able to move the robot to the coordinates of the prediction, but will drift past the coordinates. The robot is able to position itself accordingly to the starting point, but it will not be able to continuously position itself after stopping at the impact point. The drift makes the robot unable to position correctly, so the robot has to be repositioned to the correct starting point after each use.\newline
-
+Considering the outcome of this project, the final product is a partial success. One can conclude that the hardware does not meet the time constraints of the problem, and the prediction is not reliable. When a user throws an object towards the robot, it is not able to catch the object, but it is able to give a prediction of the impact point, it is able to move the robot to the coordinates of the prediction, but will drift past the coordinates. The robot is able to position itself accordingly to the starting point, but it will not be able to continuously position itself after stopping at the impact point. The drift makes the robot unable to position correctly, so the robot has to be repositioned to the correct starting point after each use.\newline
 
 The robot is able to receive data from the Kinect sensor through a wireless network, and all the tasks for the system are schedulable, and the fact that this embedded system provides a basis for a solution to the problem concludes this as a successful system in our opinion.
 The biggest objective in this project was to learn about embedded systems and real time problems. Although this project did not concern many of the classical embedded systems problems, a cyclic executive was constructed and the analysis involved. Although considerations of memory management and cpu speed was not present, some considerations were performed. Even when considering the initial preconceived notions of the platform, motors and Kinect alot of unexpected problems arose, some of which were solved and others would need different hardware to solve the problem statement.  
