--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -132,7 +132,7 @@ The definition for the introduced term interrupt vector:
 
 
 Interrupts don’t always return control flow to where the interrupt disrupted control flow. Interrupts often change the state of main memory, and that of device drivers, but does not disturb the main processor context of the computation which was disturbed. \newline
-An interrupt is pending when it's firing condition has occurred, the interrupt controller has been updated and the interrupt handler has not started executing. A missed interrupt is when the firing condition occurs but it does not become pending, this is usually because the interrupt is currently pending. Most hardware platforms, including the atmega2560, use a bit to distinguish whether an interrupt is pending or not. Hardware support can be used to disable interrupts by manipulating bits in hardware registers, either through the master interrupt enable bit, or the enable bits for each interrupt. 
+An interrupt is pending when it's firing condition has occurred, the interrupt controller has been updated and the interrupt handler has not started executing. A missed interrupt is when the firing condition occurs but it does not become pending, this is usually because another interrupt of the same type is already pending. Most hardware platforms, including the atmega2560, use a bit to distinguish whether an interrupt is pending or not, which means it does not track if there is more than one interrupt pending of that type. Hardware support can be used to disable interrupts by manipulating bits in hardware registers, either through the master interrupt enable bit, or the enable bits for each interrupt. 
 
 
 The following conditions decide when the firing condition for an interrupt is true:
@@ -153,8 +153,8 @@ Another important part of interrupts is interrupt latency, which is the time bet
 \subsection{Stack Overflow}
 \label{sec:Stack Overflow}
 A stack overflow is when a stack grows beyond the confines of the memory allocated to it, thereby corrupting RAM and could cause system malfunction and crash. Allocating memory to a stack is about a balance between enough memory to prevent stack overflow from occurring and not assigning more memory than needed. There are two ways to approach this problem, analysis and testing based. A significant advantage of analysis is that it can be performed quickly through tools, in contrast to testing which is much more laborious. \newline 
-The testing approach is about running the system and observing how large the stack grows. This approach is a kind of black box testing, it doesn’t matter how or why memory is used, all that matters is how big the stacks becomes. A problem with the testing based approach is that it can miss some of the program paths, where it might have taken a shorter branch at some point during the execution of the program. \newline
-The analysis based approach is concerned with the control flow and its goal is to find the path which pushes the most data onto the stack. The problem with the analysis based approach is that it's often too optimistic about the maximum stack size to prevent stack overflow. \newline
+The testing approach is about running the system and observing how large the stack grows. This approach is a kind of black box testing, it doesn’t matter how or why memory is used, all that matters is how big the stacks becomes. A problem with the testing based approach is that it can miss some of the program paths, where it might have taken a branch at some point during the execution of the program which causes greater stack growth than the paths tested. \newline
+The analysis based approach is concerned with the control flow and its goal is to find the path which pushes the most data onto the stack. The problem with the analysis based approach is that it's often too optimistic about the maximum stack size to prevent stack overflow, since it accomadates behaviour which occur very rarely or never. \newline
 Stack overflow is a general problem in embedded systems, but will not be a problem for this project. A common factor that leads to this, is that threads will have allocated memory and in a system with many interrupts, the interrupts can cause the memory which was allocated to the thread to overflow. The arduino mega2560 board used in this project is not using multiple threads, have relatively large memory and does not use more than one type of interrupt which cannot preempt itself. 
 
 
@@ -163,19 +163,15 @@ Stack overflow is a general problem in embedded systems, but will not be a probl
 Interrupt overload is when interrupts occur so frequently they dominate the processor from performing its other computations, which in the worst case can end up starving other important processes. While it may be intuitive to think that large interrupt payloads are a natural cause of interrupt overload, but it is rather unexpectedly large interrupt loads which can cause interrupt overload. A reliable maximum interrupt request rate is a important thing to ensure that it is accurately evaluated to have a reliable real-time system.
 
 
-To discover if the interrupt overload can occur, it is possible to analyze how much cpu utilization can be spent handling interrupts. If the cpu utilization for handling interrupts is above 100\% then the cpu might not be able to handle all interrupts, neglecting the rest of the system entirely. If the cpu utilization is below 100\%, the rest of the system also needs cpu utilization which means the net utilization could become greater than 100\% resulting in interrupt overloading starving other functions. \newline
-To prevent an interrupt overload from starving other functions,
-The maximum time spent in an interrupt handler can be calculated by the maximum execution time of a given interrupt multiplied by the worst-case arrival rate. 
-
-
-The maximum execution time of the in interrupt handler in our system is 40 clock cycles and the worst-case arrival rate is 1 occurrence per millisecond. The worst-case arrival rate is based on the maximum speed of the NXT servo motor and the motor encoder which reads it, which causes interrupts to be generated. \newline
-The maximum time spent in an interrupt handler in our system is \begin{math} \frac{40 \cdot 1}{16000} = 0.0025\% \end{math} of cpu spent dealing with interrupts, where the 16.000 comes from the cpu clock cycles per millisecond. The interrupts in this project listens to the motor encoders for change, each time a change happens(the change is between high and low voltage), it will interrupt the program and in this project it will increment a counter. Since only one type of interrupt with relatively low amount of cpu utilization is used, this type of problem doesn’t occur. 
+To discover if interrupt overload can occur, it is possible to analyze how much cpu utilization can be spent handling interrupts, the maximum time spent in an interrupt handler can be calculated by the maximum execution time of a given interrupt multiplied by the worst-case arrival rate. \newline
+The maximum execution time of the interrupt handler in our system is 40 clock cycles, 10 of which are used to enter and exit the interrupt handler with the remaing 30 being the actual interrupt handler code, and the worst-case arrival rate is 1 occurrence per millisecond. The worst-case arrival rate is based on the maximum speed of the NXT servo motor and the motor encoder which reads it, which causes interrupts to be generated. \newline
+The maximum time spent in an interrupt handler in our system is \begin{math} \frac{40 \cdot 1}{16000} = 0.0025\% \end{math} of cpu spent dealing with interrupts, where the 16.000 comes from the cpu clock cycles per millisecond. The interrupts in this project listens to the motor encoders for change, each time a change happens(the change is between high and low voltage), it will interrupt the program and in this project it will increment a counter. Since only one type of interrupt with a relatively low amount of cpu utilization is used, interrupt overload cannot occur for this system. 
 
 
 \subsubsection{Real-Time analysis}
 \label{sec:Real-Time analysis}
 The previously addressed problems of stack overflow and interrupt overload are subproblems of the real-time schedulability analysis, especially concerning interrupts, which will make sure that all computations will be met within their time constraints. \newline
 To schedule the system a cyclic executive is used, which is mentioned in section \ref{sec:Cyclic Executive}, which handles many of the problems addressed, as long as its assumptions are true. 
-Since the cyclic executive has predetermined behaviour it will have low jitter for the execution of each of the periodic tasks. Although jitter has not been a particular concern in this project.\newline Jitter is the concept of time variation in a computed output being messaged to external environment from period to period. \newline
-The strengths of using a cyclic executive include: execution schedule is predetermined, simple, efficient and fast, low jitter, prevents race-conditions and deadlock(not sure if true, seems true). 
-The very existence of a cyclic executive is a proof by construction that the real-time analysis will hold, and the problems which arise from interrupts have also been addressed in this chapter.
+Since the cyclic executive has predetermined behaviour it will have no jitter for the execution of each of the periodic tasks. Although jitter has not been a particular concern in this project.\newline Jitter is the concept of time variation in a computed output being messaged to external environment from period to period. \newline
+The strengths of using a cyclic executive include: execution schedule is predetermined, simple, efficient and fast, no jitter, prevents race-conditions and deadlock. 
+The existence of a cyclic executive is a proof by construction that the real-time analysis will hold, and the problems which arise from interrupts have also been addressed in this chapter.
