--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -25,6 +25,16 @@
 	publisher = {Thomson Learning}
 }
 
+@book{sommerville,
+	title = {Software Engineering tenth edition},
+	author = {Ian Sommerville},
+	year = {2016},
+	number = {ISBN: 1-292-09613-6},
+	series = {Paperback},
+	pages = {s. 43-100},
+	publisher = {Pearson}
+}
+
 @manual{uppaal,
 	author ={{Uppsala University} and {Aalborg University}},
 	title ={UPPAAL},
