--- a/Rapport/formalia/synopsis.tex
+++ b/Rapport/formalia/synopsis.tex
@@ -1,1 +1,8 @@
- 
+This project is about the design and implementation of a trash bin which is to catch the trash thrown at it. This is done using a Arduino Mega 2560 for the trash bin and a Microsoft Kinect for detecting and tracking the thrown trash. 
+\newline
+
+The report covers the analysis of the problem and hardware, a design specification, system design and implementation. The system is then tested and the results are discussed and concluded upon. 
+\newline
+
+
+
