--- a/Rapport/kontekst/tests.tex
+++ b/Rapport/kontekst/tests.tex
@@ -1,6 +1,6 @@
 \chapter{Tests}
 \label{chap:Tests}
-
+The following chapter will describe the schedulability analysis made with UPPAAL, the unit tests and a functionality test made for the solution. 
 
 \section{UPPAAL schedulability analysis}
 \label{sec:UPPAAL schedulability}
