--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -34,6 +34,8 @@
 %% Indledende %%												% Opdel evt. i passende afsnit for overblikkets skyld
 
 \include{intro/indledning}
+\include{intro/processModel}
+\include{intro/toolChain}
 \include{intro/analysis}
 
 %% Kontekst %%
